--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body{
     background-color: #fefdf7;
     color: #394166;
     flex-wrap: wrap;
+    font-family: Arial, Helvetica, sans-serif;
 }
 a {
     color: #394166;
@@ -32,6 +33,11 @@ main > div > div, main > div {
     justify-content: center;
     align-items: center;
     padding: 25px;
+}
+#penguins > div {
+    flex-wrap: wrap;
+    width:auto;
+    flex-direction: column;
 }
 a {
     text-decoration: none;
@@ -64,6 +70,10 @@ footer > div {
 footer > div > a {
     flex-direction: row;
 }
+svg { 
+    width: 100%; 
+    height: auto; 
+}
 
 /* end view */
 @media screen and (max-width: 1024px){
@@ -73,6 +83,7 @@ footer > div > a {
     background-color: #fefdf7;
     color: #394166;
     flex-wrap: wrap;
+    font-size: 10pt;
     }
     footer {
         display: flex;
@@ -83,5 +94,17 @@ footer > div > a {
         margin: 0;
         height: 100%;
     }
-
+    header {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+    }
+    header > div {
+        width: auto;
+    }
+    svg { 
+        width: 100%; 
+        height: 100px; 
+    }
 }
