--- a/styles.css
+++ b/styles.css
@@ -68,6 +68,7 @@ footer > div {
 }
 footer > div > a {
     flex-direction: row;
+    font-family: Arial, Helvetica, sans-serif;
 }
 svg { 
     width: 100%; 
@@ -82,7 +83,7 @@ svg {
     background-color: #fefdf7;
     color: #394166;
     flex-wrap: wrap;
-    font-size: 10pt;
+    font-size: medium;
     }
     footer {
         display: flex;
@@ -102,8 +103,15 @@ svg {
     header > div {
         width: auto;
     }
+    footer {
+        padding: 20px;
+    }
+    footer > div {
+        padding: 20px;
+    }
     svg { 
         width: 100%; 
         height: auto; 
+        padding: 15px;
     }
 }
